--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
 
   cupertino_icons: ^0.1.2
+  geolocator: ^5.1.1+1
+  flutter_spinkit: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
