--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyALZxGYSYaNpPEk2p_qwDGalCSDdVjp4Us"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="bike_mso"
