--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   geolocator: ^5.1.1+1
   flutter_spinkit: ^3.1.0
+  google_maps_flutter: ^0.5.20+3
+  flutter_polyline_points: ^0.1.0
+  http: ^0.12.0+2
 
 
 dev_dependencies:
