--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   google_maps_flutter: ^0.5.20+3
   flutter_polyline_points: ^0.1.0
   http: ^0.12.0+2
+  firebase_core: ^0.4.0+8
+  firebase_auth: ^0.14.0+2
+  cloud_firestore: ^0.12.9
 
 
 dev_dependencies:
