--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,15 @@ dependencies:
   firebase_database: ^3.0.7
   cloud_firestore: ^0.12.9+1
   loadmore: ^1.0.4
+  json_annotation: ^3.0.0
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.2
 
 flutter:
 
